fixed broken css

--- a/styles/sass/styles.scss
+++ b/styles/sass/styles.scss
@@ -3,7 +3,6 @@
 @use "./partials/header";
 @use "./partials/media-queries";
 @use "./partials/main";
-@use './partials/footer';
 
 // Colour Palette
 
@@ -24,48 +23,45 @@
     position: relative;
     text-align: center;
     bottom: 195px;
-
   }
-
 }
 
 .formBanner {
   display: flex;
 }
 .required {
-display: flex;
-flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 form {
-max-width: 600px;
-margin: 0 auto;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 label {
-display: block;
-margin-bottom: 5px;
-font-weight: bold;
+  display: block;
+  margin-bottom: 5px;
+  font-weight: bold;
 }
 
 input[type="text"],
 input[type="email"],
 input[type="tel"],
 textarea {
-display: inline-block;
-width: 100%;
-padding: 8px;
-margin-bottom: 15px;
-font-size: 16px;
+  display: inline-block;
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 15px;
+  font-size: 16px;
 }
 
 input[type="submit"] {
-background-color: $PrimaryGreen;
-color: white;
-padding: 12px 20px;
-border: none;
-border-radius: 4px;
-cursor: pointer;
-font-size: 16px;
+  background-color: $PrimaryGreen;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 16px;
 }
-
